AG-41223 update node to v22 and pnpm to v10
Squashed commit of the following:

commit d629d2c281424d0f459bbd09bdb2e37c7a233b4f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Apr 7 12:56:54 2025 -0400

    add env.PNPM_VERSION to workflows/release.yml

commit 89e3a0747512f205a7e5f2e70ffd99dc087a052d
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Apr 7 12:54:21 2025 -0400

    fix typo

commit 283953db5bc85a0df0455ff5e104f86a64609a9d
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Apr 4 15:40:35 2025 -0400

    fix release workflow

commit 68e48db3042ceabd4a65ae813921f10470001eb6
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Apr 4 15:34:52 2025 -0400

    try to fix test specs

commit 32595a45a84f595ffe4d1e091d6ec25b7e0e6d3e
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Apr 4 14:54:09 2025 -0400

    fix changelog

commit 552d8af0660030cb923605486f70cf5c8962370f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Apr 4 14:16:43 2025 -0400

    fix release workflow

commit 3d0ba91c703781d3fc5bf37afe014b06fc394997
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Apr 4 14:16:26 2025 -0400

    add pnpm configuration for neverBuiltDependencies

commit 5ff1f872103251c131c82423353bb84423c53417
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Apr 4 14:16:11 2025 -0400

    update node-qunit-puppeteer to version 2.2.1

commit d4c87e9222003e1b3aedf29887821eab76b04c62
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Apr 4 14:15:35 2025 -0400

    update .npmignore

commit e67899cb38499ba73a8be27fe083d6c6f74fb3e3
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Apr 4 13:55:46 2025 -0400

    update specs and deps

commit c8f79689e9ba5c6365c257ff6880d4d35c835ae9
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Apr 4 13:54:58 2025 -0400

    fix gitignore and npmignore

commit 47653baf4fec6fe1b6e5c549c3924a611ef7d27b
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Apr 4 13:54:21 2025 -0400

--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,17 @@
 /.github
+/bamboo-specs
 /build
 /locales
 /scripts
 /src
 /tests
+/types
+/.pnpm-store
 .eslintignore
 .eslintrc
 .gitignore
 .npmignore
 .twosky.json
-yarn.lock
 .idea
 babel.config.js
+pnpm-lock.yaml
