--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,8 @@
-name: Build Adguard Assistant
+name: Build AdGuard Assistant
 
 env:
-  NODE_VERSION: 18
+  NODE_VERSION: 22
+  PNPM_VERSION: 10.7.1
 
 on: push
 
@@ -9,18 +10,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
 
       - name: Use Node.jobs
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: yarn install
-        run: yarn install
+      - name: Install dependencies
+        run: pnpm install
 
-      - name: yarn release
-        run: yarn release
+      - name: Build release
+        run: pnpm release
 
   notify:
     needs:
