--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,8 @@
 name: Release
 
 env:
-  NODE_VERSION: 18
+  NODE_VERSION: 22
+  PNPM_VERSION: 10.7.1
 
 # Workflow need write access to the repository to create a GitHub release
 permissions:
@@ -32,29 +33,35 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           registry-url: https://registry.npmjs.org
-          cache: yarn
+          cache: pnpm
 
       - name: Install dependencies
-        run: yarn install
+        run: pnpm install
 
       - name: Run ESLint
-        run: yarn lint
+        run: pnpm lint
 
       - name: Run tests
-        run: yarn test
+        run: pnpm test
 
       - name: Run Rollup build
-        run: yarn build
+        run: pnpm build
 
       - name: Pack files
-        run: yarn pack --filename assistant.tgz
+        run: pnpm pack && mv adguard-assistant-*.tgz assistant.tgz
 
       - name: Release on GitHub
         uses: softprops/action-gh-release@v1
