--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
     "main": "dist/assistant.js",
     "types": "dist/assistant.d.ts",
     "scripts": {
-        "dev": "export CHANNEL_ENV=DEV; yarn build && yarn build:embedded && yarn build:self",
-        "beta": "export CHANNEL_ENV=BETA; yarn build && yarn build:embedded && yarn build:self",
-        "release": "export CHANNEL_ENV=RELEASE; yarn build && yarn build:embedded && yarn build:self",
+        "dev": "export CHANNEL_ENV=DEV; pnpm build && pnpm build:embedded && pnpm build:self",
+        "beta": "export CHANNEL_ENV=BETA; pnpm build && pnpm build:embedded && pnpm build:self",
+        "release": "export CHANNEL_ENV=RELEASE; pnpm build && pnpm build:embedded && pnpm build:self",
         "lint": "eslint ./src ./tests",
         "build": "webpack --config scripts/build/webpack.user.config.js",
         "build:embedded": "webpack --config scripts/build/webpack.umd.config.js",
         "build:self": "webpack --config scripts/build/webpack.self.config.js",
-        "test": "yarn webpack --config tests/webpack.test.config.js && node tests/puppeteer.js",
+        "test": "pnpm webpack --config tests/webpack.test.config.js && node tests/puppeteer.js",
         "locales:download": "LOCALES=DOWNLOAD node scripts/locales/locales.js",
         "locales:upload": "LOCALES=UPLOAD node scripts/locales/locales.js",
-        "increment": "yarn version --patch --no-git-tag-version",
-        "prepublishOnly": "yarn release"
+        "increment": "pnpm version --patch --no-git-tag-version",
+        "prepublishOnly": "pnpm release"
     },
     "author": "AdGuard",
     "license": "GPL-3.0",
@@ -28,10 +28,13 @@
         "url": "https://github.com/AdguardTeam/AdguardAssistant/issues"
     },
     "homepage": "https://github.com/AdguardTeam/AdguardAssistant#adguard-assistant",
+    "pnpm": {
+        "neverBuiltDependencies": []
+    },
     "devDependencies": {
         "@babel/core": "^7.9.0",
         "@babel/preset-env": "^7.9.0",
-        "axios": "^0.19.2",
+        "axios": "^0.21.1",
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^6",
@@ -47,14 +50,14 @@
         "html-webpack-plugin": "^5.5.0",
         "less": "^3.11.1",
         "less-loader": "^11.1.0",
-        "node-qunit-puppeteer": "^2.0.1",
-        "qunit": "^2.9.3",
+        "node-qunit-puppeteer": "^2.2.1",
+        "puppeteer": "^24.5.0",
+        "qunit": "^2.22.0",
         "replace-in-file": "^5.0.2",
         "to-string-loader": "^1.1.6",
         "url-loader": "^4.0.0",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1",
         "webpack-merge": "^5.7.3"
-    },
-    "dependencies": {}
+    }
 }
