AG-41223 fix increment script
Squashed commit of the following:

commit bd236f6a13e73659215fa6daa8209bc950bc6341
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Apr 11 11:06:40 2025 -0400

    fix increment script

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "test": "pnpm webpack --config tests/webpack.test.config.js && node tests/puppeteer.js",
         "locales:download": "LOCALES=DOWNLOAD node scripts/locales/locales.js",
         "locales:upload": "LOCALES=UPLOAD node scripts/locales/locales.js",
-        "increment": "pnpm version --patch --no-git-tag-version",
+        "increment": "pnpm version patch --no-git-tag-version",
         "prepublishOnly": "pnpm release"
     },
     "author": "AdGuard",
