AG-41223 fix pnpm install
Squashed commit of the following:

commit 69295134033581a2b5c0fe5381cc908386b657de
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Apr 17 17:40:09 2025 -0400

    fix comment

commit fb5359db080277b20c0f9238aef35f065fb43b2f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Apr 17 17:36:52 2025 -0400

    filter out ignore-scripts from bamboo_varsPnpm

commit 232035150d0612d4b7b2e437532aac0a9bc61a77
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Apr 17 16:54:56 2025 -0400

    full pnpm install for tests

commit caca2989840a360571c0e5ba0ffca72ef03e5a19
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Apr 17 16:53:44 2025 -0400

    try to export PUPPETEER_EXECUTABLE_PATH explicitly

commit a8cd5a0919d39dba2ba41f18663c05198c6af46f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Apr 17 16:47:08 2025 -0400

    specify NODE_VERSION

commit ccd99a7d4a66327e5ef3fe5ea4c1cb5fab520999
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Apr 17 16:46:50 2025 -0400

    fix pnpm install in specs

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,8 +1,10 @@
 name: Build AdGuard Assistant
 
 env:
-  NODE_VERSION: 22
+  NODE_VERSION: 22.14.0
   PNPM_VERSION: 10.7.1
+  # Forks do not have access to our vars
+  VARS_PNPM: ${{ vars.VARS_PNPM || '--silent --ignore-scripts' }}
 
 on: push
 
@@ -24,7 +26,7 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install ${{ env.VARS_PNPM }}
 
       - name: Build release
         run: pnpm release
