--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,10 @@
 name: Release
 
 env:
-  NODE_VERSION: 22
+  NODE_VERSION: 22.14.0
   PNPM_VERSION: 10.7.1
+  # Forks do not have access to our vars
+  VARS_PNPM: ${{ vars.VARS_PNPM || '--silent --ignore-scripts' }}
 
 # Workflow need write access to the repository to create a GitHub release
 permissions:
@@ -49,7 +51,7 @@ jobs:
           cache: pnpm
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install ${{ env.VARS_PNPM }}
 
       - name: Run ESLint
         run: pnpm lint
