--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,6 +28,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install ${{ env.VARS_PNPM }}
 
+      - name: Run linter
+        run: pnpm lint
+
       - name: Build release
         run: pnpm release
 
