fix dockerNode version in specs
Merge in EXTENSIONS/assistant from fix/dockerNode-version-01 to master

Squashed commit of the following:

commit 1079e256877fd222e09bdded2bd7c5976bcfa475
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Jun 30 10:17:17 2025 -0400

    fix dockerNode version in specs

--- a/bamboo-specs/build-beta.yaml
+++ b/bamboo-specs/build-beta.yaml
@@ -5,7 +5,7 @@ plan:
   key: LEGASSBETASPECS
   name: legacy assistant - build beta
 variables:
-  dockerNode: adguard/node-ssh:22-14--0
+  dockerNode: adguard/node-ssh:22.14--0
 
 stages:
   - Build:
