--- a/bamboo-specs/increment.yaml
+++ b/bamboo-specs/increment.yaml
@@ -5,7 +5,7 @@ plan:
   key: LEGASSINCRSPECS
   name: legacy assistant - increment version
 variables:
-  dockerNode: adguard/node-ssh:22-14--0
+  dockerNode: adguard/node-ssh:22.14--0
 
 stages:
   - Increment:
