Pull request #168: AG-49550 add extension requirement
Merge in EXTENSIONS/assistant from fix/AG-49550 to master

Squashed commit of the following:

commit 013d332dbb1e4cea9a8803978de26000e72b2133
Author: Maxim Topciu <mtopciu@adguard.com>
Date:   Wed Dec 17 17:31:13 2025 +0200

    AG-49550 add extension requirement

--- a/bamboo-specs/deploy-beta.yaml
+++ b/bamboo-specs/deploy-beta.yaml
@@ -31,7 +31,8 @@ userscripts.adtidy.org:
   final-tasks: []
   variables: {}
   requirements:
-    - adg-docker: true
+    - adg-docker: 'true'
+    - extension: 'true'
   notifications:
     - events:
         - deployment-started-and-finished
