--- a/bamboo-specs/increment.yaml
+++ b/bamboo-specs/increment.yaml
@@ -50,6 +50,7 @@ Increment:
           selectedRepository: defaultRepository
   requirements:
     - adg-docker: 'true'
+    - extension: 'true'
 
 branches:
   create: manually
