--- a/bamboo-specs/tests.yaml
+++ b/bamboo-specs/tests.yaml
@@ -85,6 +85,7 @@ Test:
       required: true
   requirements:
     - adg-docker: 'true'
+    - extension: 'true'
 
 branches:
   create: for-pull-request
