--- a/package.json
+++ b/package.json
@@ -33,34 +33,34 @@
         "neverBuiltDependencies": []
     },
     "devDependencies": {
-        "@adguard/translate": "^1.0.2",
-        "@babel/core": "^7.9.0",
-        "@babel/preset-env": "^7.9.0",
-        "axios": "^0.21.1",
-        "babel-loader": "^8.1.0",
-        "chalk": "4.1.2",
-        "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^6",
+        "@adguard/translate": "^2.0.1",
+        "@babel/core": "^7.29.0",
+        "@babel/preset-env": "^7.29.0",
+        "axios": "^1.13.5",
+        "babel-loader": "^9.2.1",
+        "chalk": "5.6.2",
+        "clean-webpack-plugin": "^4.0.0",
+        "copy-webpack-plugin": "^13.0.1",
         "cp-file": "^9.0.0",
         "create-file-webpack": "^1.0.2",
-        "css-loader": "^3.4.2",
-        "eslint": "^7.2.0",
-        "eslint-config-airbnb-base": "14.2.1",
-        "eslint-plugin-import": "^2.22.1",
-        "filemanager-webpack-plugin": "^2.0.5",
-        "fs-extra": "^11.1.0",
-        "html-loader": "^1.1.0",
-        "html-webpack-plugin": "^5.5.0",
-        "less": "^3.11.1",
-        "less-loader": "^11.1.0",
+        "css-loader": "^7.1.3",
+        "eslint": "^8.57.1",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-plugin-import": "^2.32.0",
+        "filemanager-webpack-plugin": "^9.0.1",
+        "fs-extra": "^11.3.3",
+        "html-loader": "^5.1.0",
+        "html-webpack-plugin": "^5.6.6",
+        "less": "^4.5.1",
+        "less-loader": "^12.3.1",
         "node-qunit-puppeteer": "^2.2.1",
-        "puppeteer": "^24.5.0",
-        "qunit": "^2.22.0",
-        "replace-in-file": "^5.0.2",
-        "to-string-loader": "^1.1.6",
-        "url-loader": "^4.0.0",
-        "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1",
-        "webpack-merge": "^5.7.3"
+        "puppeteer": "^24.37.2",
+        "qunit": "^2.25.0",
+        "replace-in-file": "5.0.2",
+        "to-string-loader": "^1.2.0",
+        "url-loader": "^4.1.1",
+        "webpack": "^5.105.1",
+        "webpack-cli": "^5.1.4",
+        "webpack-merge": "^5.10.0"
     }
 }
